# cccl

./: .gitignore  AGENTS.md  CMakePresets.json
.devcontainer/: launch.sh
c/parallel/src/clangjit/: CMakeLists.txt  compiler.cpp  config.cpp  jit_compiler.cpp  loader.cpp
c/parallel/src/clangjit/codegen/: bitcode.cpp  cub_call.cpp  iterators.cpp  operators.cpp  types.cpp
c/parallel/src/clangjit/include/clangjit/: compiler.hpp  config.hpp  jit_compiler.hpp  loader.hpp
ci/: matrix.yaml  (+2 more)
python/cuda_cccl/: .gitignore  CMakeLists.txt  MULTI_CUDA_SUPPORT.md  build_multi_cuda.py  cuda_version_info.txt.in  pyproject.toml
python/cuda_cccl/.github/workflows/: build-and-test.yml
python/cuda_cccl/benchmarks/compute/: quick_configs.yaml  run_benchmarks.py
python/cuda_cccl/benchmarks/compute/merge_sort/: keys.py  pairs.py
python/cuda_cccl/benchmarks/compute/radix_sort/: keys.py  pairs.py
python/cuda_cccl/benchmarks/compute/reduce/: custom.py  min.py  nondeterministic.py  sum.py
python/cuda_cccl/benchmarks/compute/scan/exclusive/: custom.py  sum.py
python/cuda_cccl/benchmarks/compute/segmented_reduce/: sum.py  variable_sum.py
python/cuda_cccl/benchmarks/compute/segmented_sort/: keys.py
python/cuda_cccl/benchmarks/compute/transform_reduce/: sum.py
python/cuda_cccl/benchmarks/parallel/: bench_merge_sort.py  bench_reduce.py  bench_scan.py  bench_transform.py  bench_zip_iterator.py
python/cuda_cccl/cuda/cccl/: _cuda_version_utils.py  _version_utils.py
python/cuda_cccl/cuda/cccl/headers/: include_paths.py
python/cuda_cccl/cuda/cccl/parallel/experimental/: _bindings.py
python/cuda_cccl/cuda/compute/: __init__.py  _bindings.pyi  _bindings_impl.pyx  _caching.py  _cccl_interop.py  _codegen.py  _cpp_codegen.py  _cpp_compile.py  _jit.py  _odr_helpers.py  _serialization.py  _types.py  numba_utils.py  op.py  struct.py
python/cuda_cccl/cuda/compute/_numba/: __init__.py  _compiler.py  _utils.py
python/cuda_cccl/cuda/compute/_utils/: protocols.py
python/cuda_cccl/cuda/compute/algorithms/: _binary_search.py  _histogram.py  _reduce.py  _scan.py  _segmented_reduce.py  _select.py  _three_way_partition.py  _transform.py  _unique_by_key.py
python/cuda_cccl/cuda/compute/algorithms/_sort/: _merge_sort.py  _radix_sort.py  _segmented_sort.py  _sort_common.py
python/cuda_cccl/cuda/compute/iterators/: _base.py  _cache_modified.py  _codegen_utils.py  _common.py  _constant.py  _counting.py  _discard.py  _factories.py  _iterators.py  _permutation.py  _permutation_iterator.py  _pointer.py  _protocol.py  _reverse.py  _shuffle.py  _transform.py  _zip.py  _zip_iterator.py
python/cuda_cccl/cuda/compute/iterators2/: __init__.py  _base.py  _composite.py  _constant.py  _counting.py  _discard.py  _factories.py  _permutation.py  _pointer.py  _protocol.py  _reverse.py  _simple.py  _transform.py  _zip.py
python/cuda_cccl/cuda/compute/raw/: README.md  __init__.py  _raw_iterator.py  _raw_op.py  types.py
python/cuda_cccl/cuda/cooperative/: __init__.py  _nvrtc.py  _scan_op.py  _types.py  _typing.py
python/cuda_cccl/cuda/cooperative/block/: __init__.py  _block_exchange.py  _block_load_store.py  _block_merge_sort.py  _block_radix_sort.py  _block_reduce.py  _block_scan.py
python/cuda_cccl/cuda/cooperative/warp/: __init__.py  _warp_merge_sort.py  _warp_reduce.py  _warp_scan.py
python/cuda_cccl/examples/: zip_iterator_example.py
python/cuda_cccl/tests/: test_multi_cuda_support.py
python/cuda_cccl/tests/compute/: conftest.py  test_compiled.py  test_cupy_compiled_ops.py  test_iterators.py  test_merge_sort.py  test_no_numba.py  test_permutation_iterator.py  test_raw_layer.py  test_raw_layer_cuda_core.py  test_raw_op.py  test_reduce.py  test_segmented_reduce.py  test_select.py  test_struct_field_validation.py  test_three_way_partition.py  test_transform.py  test_void_ptr_wrapper_validation.py  test_zip_iterator.py
python/cuda_cccl/tests/compute/examples/iterator/: zip_iterator_counting.py
python/cuda_cccl/tests/compute/examples/reduction/: reduce_object.py
python/cuda_cccl/tests/compute/examples/scan/: ema_example.py  exclusive_scan_object.py  inclusive_scan_object.py
python/cuda_cccl/tests/compute/examples/segmented/: segmented_reduce_object.py
python/cuda_cccl/tests/compute/examples/sort/: merge_sort_object.py  radix_sort_object.py  segmented_sort_object.py
python/cuda_cccl/tests/cooperative/: test_block_exchange.py  test_block_load.py  test_block_load_store_api.py  test_block_merge_sort.py  test_block_merge_sort_api.py  test_block_radix_sort.py  test_block_radix_sort_api.py  test_block_reduce.py  test_block_reduce_api.py  test_block_scan.py  test_block_scan_api.py  test_block_store.py  test_common.py  test_scan_op.py  test_warp_merge_sort.py  test_warp_merge_sort_api.py  test_warp_reduce.py  test_warp_reduce_api.py  test_warp_scan.py  test_warp_scan_api.py
python/cuda_cccl/tests/cooperative/examples/block/: reduce.py  scan.py
python/cuda_cccl/tests/cooperative/examples/warp/: reduce.py
python/cuda_cccl/tests/parallel/: conftest.py  test_bindings.py  test_histogram.py  test_iterators.py  test_merge_sort.py  test_radix_sort.py  test_reduce.py  test_scan.py  test_segmented_reduce.py  test_transform.py  test_unique_by_key.py  test_zip_iterator.py
python/cuda_cccl/tests/parallel/examples/histogram/: histogram_even_basic.py  histogram_object.py
python/cuda_cccl/tests/parallel/examples/iterator/: cache_modified_iterator_basic.py  constant_iterator_basic.py  counting_iterator_basic.py  reverse_input_iterator.py  reverse_output_iterator.py  transform_iterator_basic.py  transform_output_iterator.py  zip_iterator_counting.py  zip_iterator_elementwise.py  zip_iterator_reduction.py
python/cuda_cccl/tests/parallel/examples/reduction/: min_reduction.py  minmax_reduction.py  pixel_reduction.py  reduce_object.py  sum_custom_reduction.py  sum_reduction.py
python/cuda_cccl/tests/parallel/examples/scan/: ema_example.py  exclusive_scan_max.py  exclusive_scan_object.py  inclusive_scan_custom.py  inclusive_scan_object.py  logcdf_example.py  running_average.py  segmented_sum.py
(+1552 files in other folders)
